updated Readme file, connected yellow blob to main again, uninstalled styled-components, goToTop z-index fixed, h1 nowrap

--- a/app/components/Hero/index.module.scss
+++ b/app/components/Hero/index.module.scss
@@ -17,6 +17,7 @@
         text-decoration: none;
         // color: #0A3C36;
         margin-bottom: 2rem;
+        text-wrap: nowrap;
 
         &H2 {
             font-size: 1.8vw;
